# post-manager-rodb

./: .env  gold.py  main.py  pathibhara.py  pyproject.toml  rashifal.py  requirements.txt  weather.py
src/: facebook_post.py  utils.py
src/gold/: gold.py  gold_utils.py  gold_variables.py
src/rashifal/: rashifal.py  rashifal_utils.py  rashifal_variables.py
src/weather/: weather.py  weather_utils.py  weather_variables.py
